<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/himage_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="super hero image"
        android:src="@drawable/ic_launcher_background"

        />
    <Button
        android:id="@+id/button_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="add to favourites and upload"
        android:onClick="favorite"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/id"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
       android:id="@+id/id"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
       android:id="@+id/name"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/strength"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
       android:id="@+id/strength"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/speed"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
       android:id="@+id/speed"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/power"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/power"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/eye_color"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
       android:id="@+id/eye_clor"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:text="@string/hair_color"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/hair_color"
        android:textStyle="bold"
        android:textColor="@color/text1"/>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addmob"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">

    </com.google.android.gms.ads.AdView>

</LinearLayout>
</ScrollView>